# Mql4ToMql5

./: .gitignore  MIGRATION.md  README.md  convert_mql4_to_mql5.py  example.mq4  example.py  mql5_code.mq5  pyproject.toml
examples/: sample.mq5
mql4tomql5/: __init__.py  __main__.py  cli.py  converter.py  engine.py  report.py
mql4tomql5/rules/: __init__.py  base.py  directives.py  indicators.py  price.py  scan.py  trade.py
scripts/: convert_example.py
tests/: test_converter.py  test_report.py
tests/fixtures/: sample.mq4
tests/test_rules/: test_indicators.py  test_mvp_rules.py
