[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mql4tomql5"
version = "0.1.0"
description = "Convert MetaTrader 4 (MQL4) source code toward MetaTrader 5 (MQL5)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "mql4_to_mql5 contributors" }]
keywords = ["mql4", "mql5", "metatrader", "converter", "migration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
mql4tomql5 = "mql4tomql5.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mql4tomql5*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
